--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 </head>
 <body class="bg-gray-50">
     <div id="root"></div>
+    <div id="install-banner" style="display: none;" class="fixed bottom-4 left-4 right-4 bg-blue-700 text-white p-4 rounded-2xl shadow-2xl z-50 flex justify-between items-center border-2 border-white">
+    <div class="flex items-center gap-3">
+        <i class="fa-solid fa-mobile-screen-button text-2xl"></i>
+        <div>
+            <p class="font-bold text-sm">Instalar Activa-T Gym</p>
+            <p class="text-xs opacity-80">Acceso rápido desde tu menú</p>
+        </div>
+    </div>
+    <button id="install-button" class="bg-white text-blue-700 px-4 py-2 rounded-lg font-bold text-sm">
+        INSTALAR
+    </button>
+</div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
