--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activa-T Gym Cloud</title>
+    <title>Activa-T Gym</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -172,6 +172,18 @@ installButton.addEventListener('click', async () => {
                         <h1 className="text-2xl font-bold text-center mb-6 text-blue-800 italic">ACTIVA-T GYM</h1>
                         <input className="w-full p-3 border rounded mb-3" placeholder="Email" onChange={e => setFormData({...formData, email: e.target.value})} />
                         <input className="w-full p-3 border rounded mb-3" type="password" placeholder="Contraseña" onChange={e => setFormData({...formData, password: e.target.value})} />
+                        {/* Mensaje de ayuda para instalación */}
+<div className="mb-4 p-3 bg-blue-50 rounded-lg border border-blue-200 text-xs text-blue-800">
+    <p className="font-bold mb-1">📲 Cómo instalar la App:</p>
+    <div className="block md:hidden">
+        {navigator.userAgent.includes('iPhone') || navigator.userAgent.includes('iPad') ? (
+            <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) y elige <strong>"Añadir a pantalla de inicio"</strong>.</p>
+        ) : (
+            <p>Pulsa los <strong>3 puntos</strong> arriba a la derecha y elige <strong>"Instalar aplicación"</strong>.</p>
+        )}
+    </div>
+    <p className="hidden md:block">Abre esta web en tu móvil para instalarla como una App.</p>
+</div>
                         <button onClick={handleLogin} className="w-full bg-blue-600 text-white p-3 rounded-lg font-bold">ENTRAR</button>
                         <button onClick={() => setView('register')} className="w-full mt-4 text-blue-600 text-sm italic">¿No tienes cuenta? Registrate</button>
                     </div>
