Update installation instructions for mobile app

--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@ installButton.addEventListener('click', async () => {
     <p className="font-bold mb-1">📲 Cómo instalar la App:</p>
     <div className="block md:hidden">
         {navigator.userAgent.includes('iPhone') || navigator.userAgent.includes('iPad') ? (
-            <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) luego los 3 puntos y <strong>"Añadir a pantalla de inicio"</strong>.</p>
+            <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) y elige <strong>"Añadir a pantalla de inicio"</strong>.</p>
         ) : (
+            <p>Pulsa los <strong>3 puntos</strong> arriba a la derecha y elige <strong>"Instalar aplicación"</strong>.</p>
         )}
     </div>
     <p className="hidden md:block">Abre esta web en tu móvil para instalarla como una App.</p>
