Update installation instructions for mobile users

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ installButton.addEventListener('click', async () => {
         {navigator.userAgent.includes('iPhone') || navigator.userAgent.includes('iPad') ? (
             <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) y elige <strong>"Añadir a pantalla de inicio"</strong>.</p>
         ) : (
-            <p>Pulsa los <strong>3 puntos</strong> arriba a la derecha y elige <strong>"Instalar aplicación"</strong>.</p>
+            <p>Pulsa el boton de abajo<strong></strong>que pone<strong>"Instalar"</strong>.</p>
         )}
     </div>
     <p className="hidden md:block">Abre esta web en tu móvil para instalarla como una App.</p>
