Update installation instructions for iOS devices

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ installButton.addEventListener('click', async () => {
     <p className="font-bold mb-1">📲 Cómo instalar la App:</p>
     <div className="block md:hidden">
         {navigator.userAgent.includes('iPhone') || navigator.userAgent.includes('iPad') ? (
-            <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) y elige <strong>"Añadir a pantalla de inicio"</strong>.</p>
+            <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) dale a los 3 puntos y <strong>"Añadir a pantalla de inicio"</strong>.</p>
         ) : (
             <p>Pulsa el boton de abajo <strong></strong>que pone <strong>"Instalar"</strong>.</p>
         )}
