--- a/index.html
+++ b/index.html
@@ -74,27 +74,43 @@
             const [zoomImage, setZoomImage] = useState(null);
 
             // --- ESCUCHAR DATOS EN TIEMPO REAL ---
-            useEffect(() => {
-                if (!window.db) return;
+           useEffect(() => {
+    if (!window.db) return;
 
-                // 1. ESTO ES LO QUE RECUERDA LA SESIÓN
-              const unsubscribe = onAuthStateChanged(auth, (firebaseUser) => {
-              if (firebaseUser) {
-                // Si hay un usuario guardado en el navegador, lo logueamos automáticamente
-              console.log("Sesión recuperada de:", firebaseUser.email);
-               setUser(firebaseUser);
-              } else {
-               // Si no hay sesión o el usuario le dio a "Cerrar sesión"
-               setUser(null);
-               // Escuchar Usuarios
-                const qUsers = window.firestore.query(window.firestore.collection(window.db, "usuarios"));
-                const unsubUsers = window.firestore.onSnapshot(qUsers, (snapshot) => {
-                    const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-                    // Si no hay admin, lo creamos virtualmente para el login
-                    const adminExist = docs.find(u => u.role === 'admin');
-                    if (!adminExist) docs.push({ email: 'ggcaparra38@gmail.com', password: 'templerenovatio', name: 'Admin', role: 'admin' });
-                    setUsers(docs);
-                });
+    // 1. ESCUCHAR EL ESTADO DE LA SESIÓN (Para recordar al usuario)
+    const unsubscribeAuth = onAuthStateChanged(auth, (firebaseUser) => {
+        if (firebaseUser) {
+            console.log("Sesión recuperada de:", firebaseUser.email);
+            setUser(firebaseUser);
+        } else {
+            setUser(null);
+        }
+    });
+
+    // 2. ESCUCHAR USUARIOS (Fuera del if/else para que siempre carguen)
+    const qUsers = window.firestore.query(window.firestore.collection(window.db, "usuarios"));
+    const unsubscribeUsers = window.firestore.onSnapshot(qUsers, (snapshot) => {
+        const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+        
+        // Si no hay admin, lo añadimos
+        const adminExist = docs.find(u => u.role === 'admin');
+        if (!adminExist) {
+            docs.push({ 
+                email: 'ggcaparra38@gmail.com', 
+                password: 'templerenovatio', 
+                name: 'Admin', 
+                role: 'admin' 
+            });
+        }
+        setUsers(docs);
+    });
+
+    // 3. LIMPIEZA: Al cerrar la app, detenemos ambos escuchadores
+    return () => {
+        unsubscribeAuth();
+        unsubscribeUsers();
+    };
+}, []);
 
                 // Escuchar Rutinas
                 const qWorkouts = window.firestore.query(
