--- a/index.html
+++ b/index.html
@@ -74,55 +74,49 @@
             const [zoomImage, setZoomImage] = useState(null);
 
             // --- ESCUCHAR DATOS EN TIEMPO REAL ---
-          useEffect(() => {
-    if (!window.db) return;
+useEffect(() => {
+        if (!window.db) return;
 
-    // 1. Escuchar el estado de la sesión (Login persistente)
-    const unsubscribeAuth = onAuthStateChanged(auth, (firebaseUser) => {
-        if (firebaseUser) {
-            setUser(firebaseUser);
-        } else {
-            setUser(null);
-        }
-    });
+        // 1. Escuchar el estado de la sesión
+        const unsubscribeAuth = onAuthStateChanged(auth, (firebaseUser) => {
+            if (firebaseUser) {
+                setUser(firebaseUser);
+            } else {
+                setUser(null);
+            }
+        });
 
-    // 2. Escuchar Usuarios
-    const qUsers = window.firestore.query(window.firestore.collection(window.db, "usuarios"));
-    const unsubscribeUsers = window.firestore.onSnapshot(qUsers, (snapshot) => {
-        const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-        const adminExist = docs.find(u => u.role === 'admin');
-        if (!adminExist) {
-            docs.push({ 
-                email: 'ggcaparra38@gmail.com', 
-                password: 'templerenovatio', 
-                name: 'Admin', 
-                role: 'admin' 
-            });
-        }
-        setUsers(docs);
-    });
+        // 2. Escuchar Usuarios
+        const qUsers = window.firestore.query(window.firestore.collection(window.db, "usuarios"));
+        const unsubscribeUsers = window.firestore.onSnapshot(qUsers, (snapshot) => {
+            const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+            const adminExist = docs.find(u => u.role === 'admin');
+            if (!adminExist) {
+                docs.push({ 
+                    email: 'ggcaparra38@gmail.com', 
+                    password: 'templerenovatio', 
+                    name: 'Admin', 
+                    role: 'admin' 
+                });
+            }
+            setUsers(docs);
+        });
 
-    // 3. Escuchar Rutinas (si lo tenías aquí)
-    const qWorkouts = window.firestore.query(window.firestore.collection(window.db, "workouts"));
-    const unsubscribeWorkouts = window.firestore.onSnapshot(qWorkouts, (snapshot) => {
-        const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-        setWorkouts(docs);
-    });
+        // 3. Escuchar Rutinas (AHORA DENTRO DEL BLOQUE CORRECTO)
+        const qWorkouts = window.firestore.query(window.firestore.collection(window.db, "workouts"));
+        const unsubscribeWorkouts = window.firestore.onSnapshot(qWorkouts, (snapshot) => {
+            const docs = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+            setWorkouts(docs);
+        });
 
-    // Al cerrar, limpiamos los tres escuchadores
-    return () => {
-        unsubscribeAuth();
-        unsubscribeUsers();
-        unsubscribeWorkouts();
-    };
-}, []);
+        // El return con TODAS las limpiezas juntas
+        return () => {
+            unsubscribeAuth();
+            unsubscribeUsers();
+            unsubscribeWorkouts();
+        };
 
-    // 3. LIMPIEZA: Al cerrar la app, detenemos ambos escuchadores
-    return () => {
-        unsubscribeAuth();
-        unsubscribeUsers();
-    };
-}, []);
+    }, []); // ESTE ES EL ÚNICO CIERRE QUE DEBE HABER AL FINAL
 
                 // Escuchar Rutinas
                 const qWorkouts = window.firestore.query(
