--- a/index.html
+++ b/index.html
@@ -79,10 +79,19 @@
             } catch (e) {
                 console.error("Error al borrar:", e);
                 alert("No se pudo borrar la rutina");
-            }
+                const handleDeleteUser = async (userId, userName) => {
+    if (window.confirm(`¿Estás seguro de que quieres eliminar a ${userName}? Se borrarán sus datos de acceso.`)) {
+        try {
+            const docRef = window.firestore.doc(window.db, "usuarios", userId);
+            await window.firestore.deleteDoc(docRef);
+            alert("Usuario eliminado correctamente");
+        } catch (e) {
+            console.error("Error al borrar usuario:", e);
+            alert("No se pudo eliminar al usuario");
         }
-    };
-
+    }
+};
+                
             useEffect(() => {
                 if (!window.db || !window.auth) return;
 
@@ -270,6 +279,22 @@ if (!currentUser) return (
                             <textarea className="w-full p-3 border rounded mb-4" placeholder="Ejercicios..." value={workoutData.description} onChange={e => setWorkoutData({...workoutData, description: e.target.value})}></textarea>
                             <input type="file" accept="image/*,video/mp4" onChange={handleImageChange} className="w-full text-sm mb-4" />
                             <button onClick={handleSendWorkout} className="w-full bg-blue-600 text-white p-4 rounded font-bold">ENVIAR RUTINA</button>
+                            {/* LISTA DE GESTIÓN DE CLIENTES */}
+<div className="mt-8 border-t pt-6">
+    <h3 className="font-bold text-gray-700 mb-4 uppercase text-sm">Gestionar Clientes</h3>
+    <div className="space-y-2">
+        {users.filter(u => u.role === 'client').map(u => (
+            <div key={u.id} className="flex justify-between items-center bg-gray-100 p-3 rounded-lg">
+                <div>
+                    <p className="font-bold text-blue-900">{u.name}</p>
+                    <p className="text-xs text-gray-500">{u.email}</p>
+                </div>
+                <button 
+                    onClick={() => handleDeleteUser(u.id, u.name)}
+                    className="text-red-500 hover:bg-red-100 p-2 rounded-full transition-colors"
+                >
+                    <i className="fa-solid fa-user-minus"></i>
+                </button>
                         </div>
                     </div>
                 </div>
