--- a/index.html
+++ b/index.html
@@ -295,6 +295,10 @@ if (!currentUser) return (
                 >
                     <i className="fa-solid fa-user-minus"></i>
                 </button>
+                </div>
+        ))}
+    </div>
+</div>
                         </div>
                     </div>
                 </div>
